Home-29-Jan-night

--- a/project1/About.html
+++ b/project1/About.html
@@ -8,5 +8,51 @@
 <body>
     <h2>About</h2>
     
+<table class="table table-hover table-dark">
+<thead>
+    <tr>
+        <th>khan group</th>
+        <th>khan group</th>
+        <th>khan group</th>
+        <th>khan group</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+    </tr>
+    <tr>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+    </tr>
+    <tr>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+        <td>khan group</td>
+    </tr>
+</tbody>
+
+
+
+
+
+</table>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
