--- a/Project2/index.html
+++ b/Project2/index.html
@@ -34,13 +34,14 @@
           <div class="col-md-2 list-unstyled align-content-center bg-warning p-4">
             <li class="display-5"><a href="../project1/home.html" target="mycontent">Home</a></li>
             <li class="display-5"><a href="../project1/Form.html" target="mycontent">Form</a></li>
-            <li class="display-5"><a href="../project1/About.html" target="mycontent">About</a></li>
+            <li class="display-5"><a href="table.html" target="mycontent">About</a></li>
           </div>
           <div id="content" class="col-10 align-item-center float-end bg-info">
               <iframe width="1100px" height="450px" src="../project1/home.html" frameborder="0" name="mycontent" class="text-justify"></iframe>
           </div>
         </div>
-        <footer class="text-center bg-success p-3"><h6 class="text-daner">&#169 C.M. REJAUL KARIM</h6></footer>
+
+        <footer class="text-center bg-success p-3"><h6 class="text-daner">Powered by &#169 C.M. REJAUL KARIM</h6></footer>
 
 
 
