--- a/project1/table.html
+++ b/project1/table.html
@@ -1,40 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
-</head>
-<body>
-     <table class="table table-dark table-striped">
-            <tr>
-                <th>cvbnmd</th>
-                <th>cvbnmd</th>
-                <th>cvbnmd</th>
-                <th>Img</th>
-            </tr>
-            <tr>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-            </tr>
-            <tr>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-            </tr>
-            <tr>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-                <td>cvbnmd</td>
-            </tr>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <table class="table table-success table-striped table-hover">
+        <tr>
+            <th>cvbnmd</th>
+            <th>cvbnmd</th>
+            <th>cvbnmd</th>
+            <th>Img</th>
+        </tr>
+        <tr>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td> <img src="../img/julien.jpg" alt="" width="90rem"></td>
+        </tr>
+        <tr>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td><img src="../img/maurice.png" alt="" width="80"></td>
+        </tr>
+        <tr>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td><img src="../img/mauriceLeft.jpg" alt="" width="80"></td>
+        </tr>
+        <tr>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td><img src="../img/bangladesh-map-logo-F1AAB911AD-seeklogo.com.png" alt="" width="100"></td>
+        </tr>
+        <tr>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td>cvbnmd</td>
+            <td><img src="../img/bangladesh-map-logo-F1AAB911AD-seeklogo.com.png" alt="" width="100"></td>
+        </tr>
 
-     </table>
-
-
-
-</body>
+ </table>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
+
+
+
