--- a/Project03/template from sir.html
+++ b/Project03/template from sir.html
@@ -23,6 +23,7 @@
         .content {
             flex-grow: 1;
             padding: 20px;
+            width: ;
         }
         .footer {
             background: #343a40;
@@ -43,8 +44,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="Home.html" target="crk">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="form.html" target="crk">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html" target="crk">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="form.html" target="crk">Form</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" target="crk">About</a></li>
                 </ul>
             </div>
         </div>
