--- a/Project2/index.html
+++ b/Project2/index.html
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col-md-2 list-unstyled align-content-center bg-warning p-4">
             <li class="display-5"><a href="../project1/home.html" target="mycontent">Home</a></li>
-            <li class="display-5"><a href="../project1/Form.html" target="mycontent">Form</a></li>
+            <li class="display-5"><a href="../Project03/form.html" target="mycontent">Form</a></li>
             <li class="display-5"><a href="table.html" target="mycontent">About</a></li>
           </div>
           <div id="content" class="col-10 align-item-center float-end bg-info">
