--- a/prepare for final PROJECT/index.html
+++ b/prepare for final PROJECT/index.html
@@ -111,7 +111,7 @@
      <section id="home" class="">
         <div class="container row pb-5">
             <div class="col-md-2 offset-md-1 text-center">
-                <h3 class="">About Us</h3>
+                <h5 class="">About Us</h5>
                 <img src="Images/41years.webp" alt="">
             </div>
                 <div class="col-md-2 mt-4 justify-content-center">
@@ -195,6 +195,27 @@
         </div>
        </section>
       <!-- Our Digital Innovation end -->
+       <!-- Our Achivement START-->
+        <section>
+          <div class="text-center">
+            <p class="h6">
+              --- Our Achivement ---
+            </p>
+            <p class="display-6">
+              Recognition of Performance
+            </p>
+          </div>
+
+          <div>
+            <div class="class">
+              
+            </div>
+            <div class="class">
+              
+            </div>
+          </div>
+        </section>
+`        <!-- Our Achivement end-->
 
 
 
