Home-feb-06 morning

--- a/prepare for final PROJECT/index.html
+++ b/prepare for final PROJECT/index.html
@@ -131,11 +131,8 @@
                 <div class="col-md-6 offset-md-1 justify-content-center">
                     <p>Islami Bank Bangladesh PLC (IBBPLC) is the largest commercial bank of Bangladesh. It is the first Shariah-based Islamic bank in the South-East Asia established in March 1983. The Bank is a joint venture Public Limited Company with shareholding by foreign institutions and enlisted with Dhaka & Chattogram stock exchanges. With 400 branch, 265 sub-branch & 2,783 Agent Banking Outlets, the Bank posseses the largest branch network among the private sector banks in Bangladesh. It renders general banking, commercial investment and foreign exchange services with substantial CSR activities. Besides, the Bank is a global pioneer in and largest operator of Islamic microfinance.</p>
                 
-<<<<<<< Updated upstream
+
                   <a href="#" class="btn tg-btn btn-success active" role="button" aria-pressed="true"><i style='font-size:20px' class='fas'>&#xf061;</i> Who We Are</a>
-=======
-                  <a href="#" class="btn btn-success active" role="button" aria-pressed="true"><i style='font-size:20px color: #008641' class='fas'>&#xf061;</i> Who We Are</a>
->>>>>>> Stashed changes
                 </div>
         </div>
      </section>
@@ -249,19 +246,34 @@
         <!-- 1st row start -->
         <div class="row align-items-center p3">
 
-          <div class="col-md-3 offset-md-1 d-flex justify-content-center">
-            <img src="Images/deposit products.jpg" alt="">
+          <div class="col-md-3 offset-md-1 d-flex justify-content-center thumbnail">
+            <a href="" style="text-decoration: none; color: #070707;">
+              <img src="Images/deposit products.jpg" alt="">
+              <div class="caption">
+                <p>deposit products</p>
+              </div>
+            </a>
           </div>
           <div class="col-md-4 d-flex justify-content-center">
-            <img src="Images/investment products.jpg" alt="">
+            <a href="" style="text-decoration: none; color: #0e0d0d;">
+              <img src="Images/investment products.jpg" alt="">
+            <div class="caption">
+              <p>investment products</p>
+            </div>
+            </a>
           </div>
           <div class="col-md-3 d-flex justify-content-center">
-            <img src="Images/Agent-Banking.jpg" alt="">
+            <a href="" style="text-decoration: none; color: #080808;">
+              <img src="Images/Agent-Banking.jpg" alt="">
+            <div class="caption">
+              <p>Agent Banking</p>
+            </div>
+            </a>
           </div>
         </div>
         <!-- 1st row end -->
         <!-- 2nd row strt -->
-        <div>
+        <!-- <div>
           <div class="row align-items-center p3">
 
             <div class="col-md-3 offset-md-1 d-flex justify-content-center">
@@ -274,7 +286,7 @@
              <img src="Images/agent bank.png" alt="">
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- 2nd row end -->
         <div class="container pt-5">
           <img src="Images/MIcrofinance.jpg" alt="" width="1200rem" class="img-fluid">
