--- a/prepare for final PROJECT/draft.html
+++ b/prepare for final PROJECT/draft.html
@@ -14,6 +14,121 @@
     <p>islami bank sylhet zone hold agent banking conference</p>
     <p>islami bank dhaka east zone & central zone holds agent banking conference</p>
         <p></p>
+          <div style="width: 300px;">
+            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="Images/recent product/p1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="Images/recent product/p2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="Images/recent product/p3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+
+ <!-- skipped carousel start -->
+
+        <!-- <div class="col-md-7 offset-md-1">
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" style="padding-left: 50px; width: 700px;">
+            <div class="carousel-inner" style="max-width: 100%;">
+              <div class="carousel-item active">
+                <img src="Images/whats new_Offshor-Banking.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o4.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o5.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o6.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o7.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o8.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o9.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/o10.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div> -->
+                          <!-- skipped carousel end -->
+
+                <!-- <div id="carouselExample" class="carousel slide" style="width: 25rem; padding-top: 80px; margin-right: 50px;">
+            <div class="carousel-inner" >
+              <div class="carousel-item active">
+                <img src="Images/recent product/p1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p4.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p5.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p6.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p7.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p8.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p9.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Images/recent product/p10.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div> -->
+
 
         <div class="hover">
           fast
